<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".orgAddAdvertisement">

        <Button
            android:id="@+id/button15"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:layout_marginTop="84dp"
            android:background="#225EBB"
            android:fontFamily="@font/trykker"
            android:text="@string/btnBrowse"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName4"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="183dp"
            android:layout_height="39dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="12dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:hint="@string/inputHint2"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adminAddAdvert"
            android:textColor="#143567"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="75dp"
            android:layout_height="31dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="92dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblName"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="142dp"
            android:layout_height="31dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adDescrip"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <Button
            android:id="@+id/btnAddAdvertise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="#225EBB"
            android:fontFamily="@font/trykker"
            android:text="@string/btnAdd"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adImage"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="154dp"
            android:layout_height="61dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adValidPeriod"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="194dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:hint="@string/inputHint3"
            android:inputType="number"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="204dp"
            android:layout_height="43dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:hint="@string/inputHint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="197dp"
            android:layout_height="125dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:fontFamily="@font/trykker"
            android:gravity="start|top"
            android:hint="@string/inputHint4"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/adValidPeriodPrice"
            android:textColor="#143567"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="50dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>