<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".orgUpdateAdvertisement">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adValidPeriodPrice"
            android:textColor="#143567"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="162dp"
            android:layout_height="67dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="116dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adValidPeriod"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="135dp"
            android:layout_height="46dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="76dp"
            android:ems="10"
            android:inputType="number"
            android:text="@string/inputDemo2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adminUpdateAdvert"
            android:textColor="#143567"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="75dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/trykker"
            android:text="@string/lblName"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="196dp"
            android:layout_height="42dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputDemo"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="142dp"
            android:layout_height="31dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adDescrip"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/trykker"
            android:text="@string/adImage"
            android:textColor="#143567"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20" />

        <Button
            android:id="@+id/btnUpdateAdvertise2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#225EBB"
            android:fontFamily="@font/trykker"
            android:text="@string/btnUpdate"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="197dp"
            android:layout_height="125dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/inputDemo3"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <Button
            android:id="@+id/button13"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="80dp"
            android:background="#225EBB"
            android:fontFamily="@font/trykker"
            android:text="@string/btnBrowse"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="183dp"
            android:layout_height="39dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/inputDemo"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="35dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>